--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Product App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <div class="nav-bar"></div>
   <div id="app">
-    <h1>{{product}}</h1>
-    <p>{{description}}</p>
+    <div class="product">
+      <div class="product-image">
+        <img :src="image" alt="Green Socks">
+      </div>
+      ,<product-info>
+        <h1>{{product}}</h1>
+      </product-info>
+      <a :href="url">Google</a>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
