--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
       <div class="product-image">
         <img :src="image" alt="Green Socks">
       </div>
-      ,<product-info>
+      <div class="product-info">
         <h1>{{product}}</h1>
-        <p v-if="inventory > 10">In Stock</p>
-        <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+        <p v-if="inStock">In Stock</p>
         <p v-else>Out of Stock</p>
-        <p v-show="onSale">On Sale!</p>
-      </product-info>
+        <ul>
+          <li v-for="detail in details">{{detail}}</li>
+        </ul>
+        <div v-for="variant in variants" :key="variant.variantId">
+          <p>{{variant.variantColor}}</p>
+        </div>
+        <div v-for="size in sizes">
+          <p>{{size}}</p>
+        </div>
+      </div>
     </div>
   </div>
 
