--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
           <li v-for="detail in details">{{detail}}</li>
         </ul>
         <div v-for="variant in variants" :key="variant.variantId">
-          <p>{{variant.variantColor}}</p>
+          <p @mouseover="updateProduct(variant.variantImage)">{{variant.variantColor}}</p>
         </div>
-        <div v-for="size in sizes">
-          <p>{{size}}</p>
+        <button @click="addToCart">Add to Cart</button>
+        <button @click="removeFromCart">Remove from Cart</button>
+        <div class="cart">
+          <p></p>Cart({{cart}})</p>
         </div>
       </div>
     </div>
